k8s-yaml/micro-cinema-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-cinema-users
  labels:
    micro: users
spec:
  type: NodePort
  selector:
    micro: users
  ports:
  - name: users
    port: 80
    targetPort: 8080
    nodePort: 30802
---
apiVersion: v1
kind: Service
metadata:
  name: micro-cinema-bookings
  labels:
    micro: bookings
spec:
  type: NodePort
  selector:
    micro: bookings
  ports:
  - name: bookings
    port: 80
    targetPort: 8080
    nodePort: 30803
---
apiVersion: v1
kind: Service
metadata:
  name: micro-cinema-showtimes
  labels:
    micro: showtimes
spec:
  type: NodePort
  selector:
    micro: showtimes
  ports:
  - name: showtimes
    port: 80
    targetPort: 8080
    nodePort: 30804
---
apiVersion: v1
kind: Service
metadata:
  name: micro-cinema-movies
  labels:
    micro: movies
spec:
  type: NodePort
  selector:
    micro: movies
  ports:
  - name: movies
    port: 80
    targetPort: 8080
    nodePort: 30805
