k8s-yaml/ingress-mongo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-micro-mongo
spec:
  rules:
  - host: mongo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: db
          servicePort: 27017
